fix: remove the ridiculous z-index on level/elo

--- a/resources/scss/components/PlayerPresentation/_player-presentation.scss
+++ b/resources/scss/components/PlayerPresentation/_player-presentation.scss
@@ -63,7 +63,6 @@
 
 	display: flex;
 	justify-content: space-between;
-	z-index: 10000;
 
 	width: 115%;
 }
